# perfinfer-code

./: README.md
gamedemo/: README.md
gamedemo/OverdrawExample/Assets/: Tree.prefab
gamedemo/OverdrawExample/UserSettings/: AndroidLogcatSettings.asset
offline/: README.md  get_modelfile.py  get_parameter.m
offline/autotest/: .gitignore  CMakeLists.txt  botprogram.py  counter_key_table.txt  counter_key_table_filled.txt  main.cpp  virtual_keyboard_location.txt
offline/autotest/cpp/: hacklib.cpp
online/: README.md
online/perfhacker-android/: settings.gradle
online/perfhacker-android/app/: CMakeLists.txt  build.gradle
online/perfhacker-android/app/src/androidTest/java/com/example/example/exampleapp/: ExampleInstrumentedTest.java
online/perfhacker-android/app/src/main/: AndroidManifest.xml
online/perfhacker-android/app/src/main/cpp/: hacklib.cpp  hacklib_jni.cpp  models.cpp
online/perfhacker-android/app/src/main/cpp/include/: hacklib.h  hacklib_jni.h  models.h
online/perfhacker-android/app/src/main/cpp/models/: oneplus8pro.cpp
online/perfhacker-android/app/src/main/java/com/example/example/exampleapp/: MainActivity.java  MyForegroundService.java
online/perfhacker-android/app/src/main/res/drawable/: ic_baseline_4k_24.xml
online/perfhacker-android/app/src/main/res/layout/: activity_main.xml
online/perfhacker-android/app/src/main/res/values/: strings.xml  themes.xml
online/perfhacker-android/app/src/main/res/values-night/: themes.xml
online/perfhacker-android/app/src/test/java/com/example/example/exampleapp/: ExampleUnitTest.java
(+9 files in other folders)
